src/test/ui/simd/portable-intrinsics-arent-exposed.stderr
error[E0433]: failed to resolve: maybe a missing crate `core`?
  --> $DIR/portable-intrinsics-arent-exposed.rs:4:5
   |
LL | use core::simd::intrinsics;
   |     ^^^^ maybe a missing crate `core`?

error[E0432]: unresolved import `std::simd::intrinsics`
  --> $DIR/portable-intrinsics-arent-exposed.rs:5:5
   |
LL | use std::simd::intrinsics;
   |     ^^^^^^^^^^^^^^^^^^^^^ no `intrinsics` in `simd`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
